Add various new files and update old ones.
